syntax = "proto3";

package self.ed.proto.types;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;

message Types {
    double double = 1;
    float float = 2;
    int32 int32 = 3;
    int64 int64 = 4;
    bool bool = 5;
    string string = 6;
    bytes bytes = 7;

    google.protobuf.DoubleValue doubleValue = 8;
    google.protobuf.FloatValue floatValue = 9;
    google.protobuf.Int32Value int32Value = 10;
    google.protobuf.Int64Value int64Value = 11;
    google.protobuf.BoolValue boolValue = 12;
    google.protobuf.StringValue stringValue = 13;
    google.protobuf.BytesValue bytesValue = 14;

    google.protobuf.Timestamp timestamp = 15;
    google.protobuf.Duration duration = 16;
    google.protobuf.Any any = 17;
    google.protobuf.Struct struct = 18;
    google.protobuf.Empty empty = 19;

}

